--- a/_include/hu/multipathing.adoc
+++ b/_include/hu/multipathing.adoc
@@ -14,7 +14,7 @@ You don't need to make changes to the `/etc/multipath.conf` zero-byte file for S
 
 An empty `/etc/multipath.conf` file automatically loads the NetApp recommended host multipath parameters as the default settings when the operating system boots. 
 
-The default multipath parameters loaded from an empty, zero-byte `/etc/multipath.conf` file support both All SAN Array (ASA) and non-ASA array configurations.
+The default multipath parameters loaded from an empty, zero-byte `/etc/multipath.conf` file support both NetApp ASA (all-flash SAN array) and non-ASA array configurations.
 
 You can use the following multipath command verify the settings for your ONTAP LUNs:
 
