--- a/_include/hu/install-linux-host-utilities.adoc
+++ b/_include/hu/install-linux-host-utilities.adoc
@@ -1,4 +1,6 @@
-NetApp strongly recommends installing the Linux Host Utilities. The Host Utilities help you manage ONTAP LUNs and assist NetApp technical support with gathering information about your configuration. The Host Utilities don't change any settings on your Linux host.
+== Step 1: Install the Linux Host Utilities
+
+The Host Utilities don't change any settings on your Linux host.
 
 link:hu_luhu_71.html[Install Linux Host Utilities 7.1]. 
 
