Apply suggestions from code review
Co-authored-by: Aoife Hegarty <92876203+netapp-aoife@users.noreply.github.com>

--- a/hu_vsphere_8.adoc
+++ b/hu_vsphere_8.adoc
@@ -201,7 +201,7 @@ NetApp does not recommend changing any vVols settings from default at this time.
 
 Refer to the https://imt.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] for specific versions of ONTAP tools, or legacy VASA Provider for your specific versions of vSphere and ONTAP.
 
-For detailed information on provisioning and managing vVols, refer to ONTAP tools for VMware vSphere documentation, link:https://docs.netapp.com/us-en/ontap-apps-dbs/vmware/vmware-vsphere-overview.html[VMware vSphere with ONTAP^], and link:https://docs.netapp.com/us-en/ontap-apps-dbs/vmware/vmware-vvols-overview.html[Virtual Volumes (vVols) with ONTAP tools 10^].
+For detailed information on provisioning and managing vVols, refer to the ONTAP tools for VMware vSphere documentation, link:https://docs.netapp.com/us-en/ontap-apps-dbs/vmware/vmware-vsphere-overview.html[VMware vSphere with ONTAP^], and link:https://docs.netapp.com/us-en/ontap-apps-dbs/vmware/vmware-vvols-overview.html[Virtual Volumes (vVols) with ONTAP tools 10^].
 
 
 == Recommended settings
