--- a/_include/hu/multipathing.adoc
+++ b/_include/hu/multipathing.adoc
@@ -1,4 +1,4 @@
-To ensure that multipathing is configured correctly for your host, verify that the `/etc/multipath.conf` file is defined and that the you have the NetApp recommended settings configured for your ONTAP LUNs. 
+To ensure that multipathing is configured correctly for your host, verify that the `/etc/multipath.conf` file is defined and that you have the NetApp recommended settings configured for your ONTAP LUNs. 
 
 .Steps 
 
@@ -9,7 +9,7 @@ To ensure that multipathing is configured correctly for your host, verify that t
 touch /etc/multipath.conf
 ----
 
-. The first time you create the `multipath.conf` file, you might need to enable and start the multipath services: 
+. The first time the `multipath.conf` file is created, you might need to enable and start the multipath services: 
 +
 [source,cli]
 ----
@@ -64,9 +64,9 @@ When you boot the host, the empty /etc/multipath.conf file automatically loads t
 multipath -ll
 ----
 +
-The following examples outputs show the correct settings for ONTAP LUNs for an ASA and non-ASA configuration. In ASA and non-ASA configurations, a single ONTAP LUN shouldn't require more than four paths. If there are more than four paths, it might cause issues with the paths during a storage failure.
+The following example outputs show the correct settings for ONTAP LUNs for an ASA and non-ASA configuration. In ASA and non-ASA configurations, a single ONTAP LUN shouldn't require more than four paths. If there are more than four paths, it might cause issues with the paths during a storage failure.
 +
-NOTE: The default multipath parameters loaded from an empty, zero-byte `/etc/multipath.conf` file support both ASA and non-ASA configurations for AFF, FAS, and cloud systems.
+NOTE: The default multipath parameters loaded from an empty, zero-byte `/etc/multipath.conf` file support both ASA and non-ASA configurations for AFF and FAS systems and cloud storage.
 +
 [role="tabbed-block"]
 ====
