removing deprecated adocs and other minor edits

--- a/_include/hu/install-linux-host-utilities.adoc
+++ b/_include/hu/install-linux-host-utilities.adoc
@@ -1,6 +1,5 @@
 == Step 1: Install the Linux Host Utilities
 
-The Host Utilities don't change any settings on your Linux host.
-
 link:hu_luhu_71.html[Install Linux Host Utilities 7.1]. 
 
+NOTE: Installing the Linux Host Utilities doesn't change any settings on your Linux host.
