--- a/_include/hu/multipathing.adoc
+++ b/_include/hu/multipathing.adoc
@@ -1,8 +1,8 @@
-To ensure that multipathing is configured correctly for your host, verify that the `/etc/multipath.conf` file is defined and that you have the NetApp recommended settings configured for your ONTAP LUNs. 
+To ensure that multipathing is configured correctly for your host, verify that the `/etc/multipath.conf` file is defined and that you have the NetApp recommended settings configured for your ONTAP LUNs. The `/etc/multipath.conf` file is created when you configure your host for the first time. 
 
 .Steps 
 
-. The `/etc/multipath.conf` file is created when you configure your host for the first time. Verify that the `/etc/multipath.conf` file exits. If the file doesn't exist, create an empty, zero-byte file:
+. Verify that the `/etc/multipath.conf` file exits. If the file doesn't exist, create an empty, zero-byte file:
 +
 [source,cli]
 ----
@@ -66,7 +66,7 @@ multipath -ll
 +
 The following example outputs show the correct settings for ONTAP LUNs for an ASA and non-ASA configuration. In ASA and non-ASA configurations, a single ONTAP LUN shouldn't require more than four paths. If there are more than four paths, it might cause issues with the paths during a storage failure.
 +
-NOTE: The default multipath parameters loaded from an empty, zero-byte `/etc/multipath.conf` file support both ASA and non-ASA configurations for AFF and FAS systems and cloud storage.
+NOTE: The default multipath parameters loaded from an empty, zero-byte `/etc/multipath.conf` file support ASA and non-ASA configurations for AFF and FAS systems and cloud storage.
 +
 [role="tabbed-block"]
 ====
