--- a/hu-rl-94.adoc
+++ b/hu-rl-94.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: hu-rl-94html
+permalink: hu-rl-94.html
 keywords: host utilities, rocky, linux, 9.4, netapp, ontap, fcp, iscsi
 summary: Describes how to use Rocky Linux 9.4 with FCP and iSCSI for ONTAP storage
 ---
