--- a/_include/hu/enable-san-boot-linux.adoc
+++ b/_include/hu/enable-san-boot-linux.adoc
@@ -1,4 +1,4 @@
-== Step 2: Enable SAN booting
+== Step 3: Optionally, enable SAN booting
 
 You can configure your host to use SAN booting to simplify deployment and improve scalability.
 
