--- a/nvme_rockylinux_84.adoc
+++ b/nvme_rockylinux_84.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rhel_84.html
+permalink: nvme_rockylinux_84.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 8.4 with ONTAP
 ---
