--- a/nvme_rockylinux_89.adoc
+++ b/nvme_rockylinux_89.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rhel_89.html
+permalink: nvme_rockylinux_89.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 8.9 with ONTAP
 ---
