--- a/nvme_rockylinux_810.adoc
+++ b/nvme_rockylinux_810.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rhel_810.html
+permalink: nvme_rockylinux_810.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 8.10 with ONTAP
 ---
