--- a/nvme_rockylinux_85.adoc
+++ b/nvme_rockylinux_85.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rhel_85.html
+permalink: nvme_rockylinux_85.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 8.5 with ONTAP
 ---
