--- a/nvme_rockylinux_86.adoc
+++ b/nvme_rockylinux_86.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rhel_86.html
+permalink: nvme_rockylinux_86.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 8.6 with ONTAP
 ---
