--- a/nvme_rockylinux_87.adoc
+++ b/nvme_rockylinux_87.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rhel_87.html
+permalink: nvme_rockylinux_87.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 8.7 with ONTAP
 ---
