--- a/nvme_rockylinux_88.adoc
+++ b/nvme_rockylinux_88.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rhel_88.html
+permalink: nvme_rockylinux_88.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 8.8 with ONTAP
 ---
