--- a/nvme_rockylinux_90.adoc
+++ b/nvme_rockylinux_90.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rhel_90.html
+permalink: nvme_rockylinux_90.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 9.0 with ONTAP
 ---
