--- a/nvme_rockylinux_91.adoc
+++ b/nvme_rockylinux_91.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rhel_91.html
+permalink: nvme_rockylinux_91.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 9.1 with ONTAP
 ---
