--- a/nvme_rockylinux_92.adoc
+++ b/nvme_rockylinux_92.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rhel_92.html
+permalink: nvme_rockylinux_92.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 9.2 with ONTAP
 ---
