--- a/nvme_rockylinux_93.adoc
+++ b/nvme_rockylinux_93.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rhel_93.html
+permalink: nvme_rockylinux_93.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 9.3 with ONTAP
 ---
