--- a/nvme_rockylinux_94.adoc
+++ b/nvme_rockylinux_94.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rhel_94.html
+permalink: nvme_rockylinux_94.html
 keywords: nvme, linux, rhel, red hat, enterprise
 summary: How to Configure NVMe-oF Host for RHEL 9.4 with ONTAP
 ---
