--- a/nvme_rockylinux_95.adoc
+++ b/nvme_rockylinux_95.adoc
@@ -1,11 +1,11 @@
 ---
 sidebar: sidebar
 permalink: nvme_rockylinux_95.html
-keywords: nvme, linux, rhel, red hat, enterprise
-summary: How to Configure NVMe-oF Host for RHEL 9.5 with ONTAP
+keywords: nvme, linux, rocky linux, enterprise
+summary: How to Configure NVMe-oF Host for Rocky Linux 9.5 with ONTAP
 ---
 
-= NVMe-oF host configuration for RHEL 9.5 with ONTAP
+= NVMe-oF host configuration for Rocky Linux 9.5 with ONTAP
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -17,7 +17,7 @@ summary: How to Configure NVMe-oF Host for RHEL 9.5 with ONTAP
 include::_include/nvme/reuse-nvme-introduction.adoc[]
 
 .About this task 
-You can use the following support and features with the NVMe-oF host configuration for Red Hat Enterprise Linux (RHEL) 9.5. You should also review the known limitations before starting the configuration process.
+You can use the following support and features with the NVMe-oF host configuration for Rocky Linux 9.5. You should also review the known limitations before starting the configuration process.
 
 * Support available:
 ** Support for NVMe over TCP (NVMe/TCP) in addition to NVMe over Fibre Channel (NVMe/FC). The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
@@ -25,19 +25,19 @@ You can use the following support and features with the NVMe-oF host configurati
 +
 For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 * Features available:
-** Beginning with ONTAP 9.12.1, support for secure in-band authentication is introduced for NVMe-oF. You can use secure in-band authentication for NVMe-oF with RHEL 9.5.
-** RHEL 9.5 enables in-kernel NVMe multipath for NVMe namespaces by default, removing the need for explicit settings.
+** Beginning with ONTAP 9.12.1, support for secure in-band authentication is introduced for NVMe-oF. You can use secure in-band authentication for NVMe-oF with Rocky Linux 9.5.
+** Rocky Linux 9.5 enables in-kernel NVMe multipath for NVMe namespaces by default, removing the need for explicit settings.
 ** Support for SAN booting using the NVMe/FC protocol.
 * Known limitations: 
 ** There are no known limitations.
 
 == Validate software versions
 
-You can use the following procedure to validate the minimum supported RHEL 9.5 software versions.
+You can use the following procedure to validate the minimum supported Rocky Linux 9.5 software versions.
 
 .Steps
 
-. Install RHEL 9.5 on the server. After the installation is complete, verify that you are running the specified RHEL 9.5 kernel: 
+. Install Rocky Linux 9.5 on the server. After the installation is complete, verify that you are running the specified Rocky Linux 9.5 kernel: 
 +
 ----
 uname -r
@@ -67,7 +67,7 @@ rpm -qa|grep libnvme
 libnvme-1.9-3.el9.x86_64
 ----
 
-. On the RHEL 9.5 host, check the hostnqn string at `/etc/nvme/hostnqn`:
+. On the Rocky Linux 9.5 host, check the hostnqn string at `/etc/nvme/hostnqn`:
 +
 ----
 cat /etc/nvme/hostnqn
@@ -221,7 +221,7 @@ FCP CMPL: xb 000014a5 Err 0002149a
 
 Configure NVMe/FC for a Marvell/QLogic adapter.
 
-NOTE: The native inbox qla2xxx driver included in the RHEL 9.5 GA kernel has the latest fixes. These fixes are essential for ONTAP support. 
+NOTE: The native inbox qla2xxx driver included in the Rocky Linux 9.5 GA kernel has the latest fixes. These fixes are essential for ONTAP support. 
 
 .Steps
 
@@ -528,7 +528,7 @@ nvme	connect-all	-t	tcp	-w	192.168.2.31	-a	192.168.2.25
 =====
 
 [NOTE]
-Beginning with RHEL 9.5, the default setting for the NVMe/TCP `ctrl_loss_tmo` timeout is turned off. This means there is no limit on the number of retries (indefinite retry). Consequently, you don't need to manually configure a specific `ctrl_loss_tmo` timeout duration when using the `nvme connect` or `nvme connect-all` commands (option -l ). With this default behavior, the NVMe/TCP controllers don't experience timeouts in the event of a path failure and remain connected indefinitely.
+Beginning with Rocky Linux 9.5, the default setting for the NVMe/TCP `ctrl_loss_tmo` timeout is turned off. This means there is no limit on the number of retries (indefinite retry). Consequently, you don't need to manually configure a specific `ctrl_loss_tmo` timeout duration when using the `nvme connect` or `nvme connect-all` commands (option -l ). With this default behavior, the NVMe/TCP controllers don't experience timeouts in the event of a path failure and remain connected indefinitely.
 
 
 == Validate NVMe-oF
@@ -692,7 +692,7 @@ nvme netapp ontapdevices -o json
 
 == Set up secure in-band authentication
 
-Beginning with ONTAP 9.12.1, secure in-band authentication is supported over NVMe/TCP and NVMe/FC between a RHEL 9.5 host and an ONTAP controller.
+Beginning with ONTAP 9.12.1, secure in-band authentication is supported over NVMe/TCP and NVMe/FC between a Rocky Linux 9.5 host and an ONTAP controller.
 
 To set up secure authentication, each host or controller must be associated with a `DH-HMAC-CHAP` key, which is a combination of the NQN of the NVMe host or controller and an authentication secret configured by the administrator. To authenticate its peer, an NVMe host or controller must recognize the key associated with the peer. 
 
@@ -710,7 +710,7 @@ Set up secure in-band authentication using the CLI.
 ----
 cat /etc/nvme/hostnqn
 ----
-. Generate the dhchap key for the RHEL 9.5 host.
+. Generate the dhchap key for the Rocky Linux 9.5 host.
 +
 The following output describes the `gen-dhchap-key` command paramters:
 +
@@ -892,6 +892,6 @@ DHHC-1:03:L52ymUoR32zYvnqZFe5OHhMg4gxD79jIyxSShHansXpVN+WiXE222aVc651JxGZlQCI863
 
 == Known issues
 
-No known issues exist for the NVMe-oF host configuration on RHEL 9.5 with ONTAP release.
+No known issues exist for the NVMe-oF host configuration on Rocky Linux 9.5 with ONTAP release.
 
 //ONTAPDOC-2561 25-Nov-2024
